syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.proto";

package com.example;

// The greeting service definition.
service ExampleGrpcEndpoint {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc ItKeepsTalking (stream HelloRequest) returns (HelloReply) {}

  rpc ItKeepsReplying (HelloRequest) returns (stream HelloReply) {}

  rpc StreamHellos (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
